--- a/src/style/mobile/navBar.scss
+++ b/src/style/mobile/navBar.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   right: 0;
-  height: fit-content;
+  height: 25vw;
   width: 100vw;
   display: grid;
   grid-auto-columns: minmax(0, 1fr);
